--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header class="page-header">
       <div class="container">
-        tatyana.den96@gmail.com +380997661869
+        <a class="header-email"
+        href="mailto:tatyana.den96@gmail.com">tatyana.den96@gmail.com</a> 
+        <a class="header-phone"
+        href="tel:+380997661869">+380997661869</a>
       </div>
     </header>
 
@@ -22,6 +25,9 @@
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="files/user2.jpg" widht="600" height="600" alt="Фотография">
+      </figure>
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <h3>Пара слов о себе</h3>
@@ -34,10 +40,12 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+        </figure>
         <h3>Магазин товаров для дома</h3>
        <p>Мой первый сайт.</p>
-
+       <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -45,7 +53,10 @@
 
     <footer class="page-footer">
       <div class="container">
-        tatyana.den96@gmail.com +380997661869
+        <a class="footer-email"
+        href="mailto:tatyana.den96@gmail.com">tatyana.den96@gmail.com</a> 
+        <a class="footer-phone"
+        href="tel:+380997661869">+380997661869</a>
      </div>
     </footer>
   </body>
