Как добавить на сайт-портфолио ссылки и изображения

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="intro">
       <figure class="user-image">
-        <img src="files/user2.jpg" widht="600" height="600" alt="Фотография">
+        <img src="files/user.jpg" widht="600" height="600" alt="Фотография">
       </figure>
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
